--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "True"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "  'timezone': 'Europe/Madrid'}]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "    'radius': 22000}}}}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,23 +553,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Documento inserido com ID: 65c4f89e23d7612a93f0cdec\n"
+      "Documento inserido com ID: 65c5265242f3809023a09002\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('65c4f89e23d7612a93f0cdec'), acknowledged=True)"
+       "InsertOneResult(ObjectId('65c5265242f3809023a09002'), acknowledged=True)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,9 +581,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2580039275.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[13], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    'suffix': '.png'}}],\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "{'results': [{'fsq_id': '4c9b0a2cd4b1b1f7ad69d535',\n",
     "   'categories': [{'id': 13035,\n",
@@ -596,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
