add extraction function

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -978,6 +978,110 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_layers(map_, list_dfs, names_dfs):\n",
+    "    \n",
+    "    layers = []  # List to store all layers\n",
+    "    heatmap_data = []  # List to store data for heatmap\n",
+    "    # Iterate over each DataFrame and its corresponding name\n",
+    "    for df, df_name in zip(list_dfs, names_dfs):\n",
+    "        layer = folium.FeatureGroup(name=f'{df_name}')  # Create a new layer for markers\n",
+    "        for _, row in df.iterrows():\n",
+    "            # Determine icon properties based on the DataFrame type\n",
+    "            if df.equals(gaming_companies):\n",
+    "                color = \"red\"\n",
+    "                icon_color = \"white\"\n",
+    "                icon = \"gamepad\"\n",
+    "            elif df.equals(schools):\n",
+    "                color = \"blue\"\n",
+    "                icon_color = \"white\"\n",
+    "                icon = \"school-flag\"\n",
+    "            elif df.equals(starbucks):\n",
+    "                color = \"green\"\n",
+    "                icon_color = \"white\"\n",
+    "                icon = \"mug-hot\"\n",
+    "            elif df.equals(design_companies):\n",
+    "                color = \"orange\"\n",
+    "                icon_color = \"white\"\n",
+    "                icon = \"pen-nib\"\n",
+    "            # Create marker with icon for each row in the DataFrame\n",
+    "            icon = folium.Icon(\n",
+    "                        color=color,\n",
+    "                        icon_color=icon_color,\n",
+    "                        icon=icon,\n",
+    "                        prefix=\"fa\"\n",
+    "                )\n",
+    "            folium.Marker(location=[row['lat'], row['lon']], popup=row['name'], icon=icon).add_to(layer)\n",
+    "            # Add data for heatmap\n",
+    "            heatmap_data.append([row['lat'], row['lon'], 1])  # Each point appends its latitude, its longitude and assigns 1 to\n",
+    "            # each point, that will be use in the future to select the point with more points near it\n",
+    "        layers.append(layer)  # Add marker layer to the list of layers\n",
+    "    # Create heatmap layer using the collected data\n",
+    "    heatmap_layer = HeatMap(heatmap_data, radius=15, name='Heat Map')\n",
+    "    layers.append(heatmap_layer)  # Add heatmap layer to the list of layers\n",
+    "    # Find the coordinates in the heatmap with more points near it\n",
+    "    max_intensity = max([point[2] for point in heatmap_data]) # this selects the maximum point with more values in the position [2], that will be 1 per point appended\n",
+    "    hottest_coordinates = [[point[0], point[1]] for point in heatmap_data if point[2] == max_intensity]\n",
+    "    # Create a new layer for the top five points with more coincidences in the map\n",
+    "    hottest_points_layer = folium.FeatureGroup(name='Top 5')\n",
+    "    for i, coords in enumerate(hottest_coordinates[:5]):\n",
+    "        icon_top = folium.Icon(\n",
+    "                        color=\"red\",\n",
+    "                        icon_color=\"white\",\n",
+    "                        icon=\"fire\",\n",
+    "                        prefix=\"fa\"\n",
+    "                )\n",
+    "        folium.Marker(location=coords, popup=f'Hot Point {i+1}', icon=icon_top ).add_to(hottest_points_layer)\n",
+    "    layers.append(hottest_points_layer)  # Add the hottest points layer to the list of layers\n",
+    "    # Create a new layer for the hottest point\n",
+    "    best_company_layer = folium.FeatureGroup(name='Best Company')\n",
+    "    icon_best = folium.Icon(\n",
+    "                        color=\"darkred\",\n",
+    "                        icon_color=\"white\",\n",
+    "                        icon=\"trophy\",\n",
+    "                        prefix=\"fa\"\n",
+    "                )\n",
+    "    folium.Marker(location=hottest_coordinates[0], popup='Bandstocks', icon=icon_best).add_to(best_company_layer)\n",
+    "    layers.append(best_company_layer)  # Add the single hottest point layer to the list of layers\n",
+    "    return layers  # Return the list of layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the starting map\n",
+    "london_lat = 51.4991568\n",
+    "london_lon = -0.1908626\n",
+    "london_map = folium.Map(location=[london_lat, london_lon], zoom_start=12)\n",
+    "# List of DFs for the function. And list of names for the layers\n",
+    "list_dfs = [gaming_companies, schools, design_companies, starbucks]\n",
+    "names_dfs = ['gaming companies', 'schools', 'design companies', 'starbucks']\n",
+    "# Create layers for each DataFrame in the list\n",
+    "layers = create_layers(london_map, list_dfs, names_dfs)\n",
+    "# Add each layer to the map\n",
+    "for layer in layers:\n",
+    "    layer.add_to(london_map)\n",
+    "# Add layer control to the map to select which layers to show\n",
+    "folium.LayerControl().add_to(london_map)\n",
+    "london_map.save(\"heat_map.html\")\n",
+    "london_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -996,7 +1100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
