--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -591,300 +591,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
-       "&lt;html&gt;\n",
-       "&lt;head&gt;\n",
-       "    \n",
-       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
-       "    \n",
-       "        &lt;script&gt;\n",
-       "            L_NO_TOUCH = false;\n",
-       "            L_DISABLE_3D = false;\n",
-       "        &lt;/script&gt;\n",
-       "    \n",
-       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
-       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
-       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://code.jquery.com/jquery-3.7.1.min.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
-       "    \n",
-       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
-       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
-       "            &lt;style&gt;\n",
-       "                #map_8f65d50679f579ec9da6ef3a983e3c2a {\n",
-       "                    position: relative;\n",
-       "                    width: 100.0%;\n",
-       "                    height: 100.0%;\n",
-       "                    left: 0.0%;\n",
-       "                    top: 0.0%;\n",
-       "                }\n",
-       "                .leaflet-container { font-size: 1rem; }\n",
-       "            &lt;/style&gt;\n",
-       "        \n",
-       "&lt;/head&gt;\n",
-       "&lt;body&gt;\n",
-       "    \n",
-       "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8f65d50679f579ec9da6ef3a983e3c2a&quot; &gt;&lt;/div&gt;\n",
-       "        \n",
-       "&lt;/body&gt;\n",
-       "&lt;script&gt;\n",
-       "    \n",
-       "    \n",
-       "            var map_8f65d50679f579ec9da6ef3a983e3c2a = L.map(\n",
-       "                &quot;map_8f65d50679f579ec9da6ef3a983e3c2a&quot;,\n",
-       "                {\n",
-       "                    center: [41.4046268, 2.1893276],\n",
-       "                    crs: L.CRS.EPSG3857,\n",
-       "                    zoom: 15,\n",
-       "                    zoomControl: true,\n",
-       "                    preferCanvas: false,\n",
-       "                }\n",
-       "            );\n",
-       "\n",
-       "            \n",
-       "\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_8f8c23a813392ba37d159585f8d76821 = L.tileLayer(\n",
-       "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            tile_layer_8f8c23a813392ba37d159585f8d76821.addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var marker_52dd3d80b5c8f8434fada6e56cc0a82f = L.marker(\n",
-       "                [41.406352, 2.192229],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_bed24af3d3bd6334b6ce8c6fcaa3ed72 = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_52dd3d80b5c8f8434fada6e56cc0a82f.setIcon(icon_bed24af3d3bd6334b6ce8c6fcaa3ed72);\n",
-       "        \n",
-       "    \n",
-       "            marker_52dd3d80b5c8f8434fada6e56cc0a82f.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Foxize School\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_f43acd8724eb09bace6eedc761060a5e = L.marker(\n",
-       "                [41.403333, 2.198838],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_7d4ac5bac79dc0762a0a205fd5ad446b = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_f43acd8724eb09bace6eedc761060a5e.setIcon(icon_7d4ac5bac79dc0762a0a205fd5ad446b);\n",
-       "        \n",
-       "    \n",
-       "            marker_f43acd8724eb09bace6eedc761060a5e.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Pepe School Land\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_5060070b503b6ab4defb0bfa076d39db = L.marker(\n",
-       "                [41.411034, 2.191441],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_f5ca20bcdbded3924c11900a520e8f3d = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_5060070b503b6ab4defb0bfa076d39db.setIcon(icon_f5ca20bcdbded3924c11900a520e8f3d);\n",
-       "        \n",
-       "    \n",
-       "            marker_5060070b503b6ab4defb0bfa076d39db.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Old School Bakery Cafe\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_21de5853b037fc07484f7cc72a9450cb = L.marker(\n",
-       "                [41.411682, 2.19192],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_bd456f2dadc9a67bd0528767b3f0a362 = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_21de5853b037fc07484f7cc72a9450cb.setIcon(icon_bd456f2dadc9a67bd0528767b3f0a362);\n",
-       "        \n",
-       "    \n",
-       "            marker_21de5853b037fc07484f7cc72a9450cb.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Old School\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_20df9f9a4aca5b2247d52e35d96a5efb = L.marker(\n",
-       "                [41.413524, 2.19293],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_3ca11d4c9fec4dda620ca8e3575274c0 = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_20df9f9a4aca5b2247d52e35d96a5efb.setIcon(icon_3ca11d4c9fec4dda620ca8e3575274c0);\n",
-       "        \n",
-       "    \n",
-       "            marker_20df9f9a4aca5b2247d52e35d96a5efb.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Chisholm School\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_a538324131585a40ad6809735ecaef1d = L.marker(\n",
-       "                [41.409505, 2.185992],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_05d0967947ec2a0e6b7b79c731e08d64 = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_a538324131585a40ad6809735ecaef1d.setIcon(icon_05d0967947ec2a0e6b7b79c731e08d64);\n",
-       "        \n",
-       "    \n",
-       "            marker_a538324131585a40ad6809735ecaef1d.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Today School\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_1b2563b9eda68505b6f6bc9eaaf9b789 = L.marker(\n",
-       "                [41.40129, 2.202319],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_94cb47392bf04acd8585729fa848dc47 = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_1b2563b9eda68505b6f6bc9eaaf9b789.setIcon(icon_94cb47392bf04acd8585729fa848dc47);\n",
-       "        \n",
-       "    \n",
-       "            marker_1b2563b9eda68505b6f6bc9eaaf9b789.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Urban School\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_99582aa3d2a4b8b2f69669af48678516 = L.marker(\n",
-       "                [41.399275, 2.197754],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_9214630e43c05180300e6fc66646a6ef = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_99582aa3d2a4b8b2f69669af48678516.setIcon(icon_9214630e43c05180300e6fc66646a6ef);\n",
-       "        \n",
-       "    \n",
-       "            marker_99582aa3d2a4b8b2f69669af48678516.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Fashion Group Bcn School\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_7fac668668f2ffe9b04542535c96f41a = L.marker(\n",
-       "                [41.414447, 2.194152],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_d70cb775f72f915e2a1e580d19f00966 = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_7fac668668f2ffe9b04542535c96f41a.setIcon(icon_d70cb775f72f915e2a1e580d19f00966);\n",
-       "        \n",
-       "    \n",
-       "            marker_7fac668668f2ffe9b04542535c96f41a.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Complex Esportiu Municipal Bac de Roda\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_ec4722752347b1283d1e9af215f4b177 = L.marker(\n",
-       "                [41.401412, 2.204491],\n",
-       "                {}\n",
-       "            ).addTo(map_8f65d50679f579ec9da6ef3a983e3c2a);\n",
-       "        \n",
-       "    \n",
-       "            var icon_4025466e8737e947dfded6c5db7ee175 = L.AwesomeMarkers.icon(\n",
-       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;graduation-cap&quot;, &quot;iconColor&quot;: &quot;black&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;fa&quot;}\n",
-       "            );\n",
-       "            marker_ec4722752347b1283d1e9af215f4b177.setIcon(icon_4025466e8737e947dfded6c5db7ee175);\n",
-       "        \n",
-       "    \n",
-       "            marker_ec4722752347b1283d1e9af215f4b177.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Biblioteca Poblenou-Manuel Arranz\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {&quot;sticky&quot;: true}\n",
-       "            );\n",
-       "        \n",
-       "&lt;/script&gt;\n",
-       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
-      ],
-      "text/plain": [
-       "<folium.folium.Map at 0x168bea73910>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_map"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1081,7 +787,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pymongo import MongoClient\n",
+    "import pandas as pd\n",
+    "\n",
+    "def enviar_lista_dataframe_para_mongodb(lista_de_dataframes, nome_banco):\n",
+    "    # Conectar ao servidor MongoDB\n",
+    "    client = MongoClient('localhost', 27017)\n",
+    "\n",
+    "    # Selecionar o banco de dados\n",
+    "    db = client[nome_banco]\n",
+    "\n",
+    "    # Iterar sobre a lista de DataFrames\n",
+    "    for idx, dataframe in enumerate(lista_de_dataframes):\n",
+    "        # Salvar DataFrame em um arquivo CSV\n",
+    "        nome_arquivo_csv = f\"dataframe_{idx}.csv\"\n",
+    "        dataframe.to_csv(nome_arquivo_csv, index=False)\n",
+    "\n",
+    "        # Obter o nome da coleção com base no valor da coluna 'Type'\n",
+    "        nome_colecao = dataframe['Type'].iloc[0]  # Assumindo que 'Type' é uma coluna válida\n",
+    "\n",
+    "        # Selecionar a coleção\n",
+    "        colecao = db[nome_colecao]\n",
+    "\n",
+    "        # Converter DataFrame para dicionário\n",
+    "        dados_dict = dataframe.to_dict(orient='records')\n",
+    "\n",
+    "        # Inserir o dicionário na coleção\n",
+    "        colecao.insert_many(dados_dict)\n",
+    "\n",
+    "# Exemplo de uso\n",
+    "# Supondo que você tenha uma lista de DataFrames chamada lista_de_dataframes\n",
+    "# e um nome de banco de dados chamado 'seu_banco_de_dados'\n",
+    "enviar_lista_dataframe_para_mongodb(lista_de_dataframes, 'seu_banco_de_dados')\n"
+   ]
   }
  ],
  "metadata": {
@@ -1100,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
