--- a/examples/04.I - Geovisualization I - Folium-markers-layers.ipynb
+++ b/examples/04.I - Geovisualization I - Folium-markers-layers.ipynb
@@ -46144,9 +46144,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ironhack",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -46158,7 +46158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   },
   "nbTranslate": {
    "displayLangs": [
