--- a/Silicon Valley_map copy.ipynb
+++ b/Silicon Valley_map copy.ipynb
@@ -281,7 +281,7 @@
     "    db = client[\"Project-Spot\"]\n",
     "    for i, v in enumerate(data):\n",
     "        file_csv = f\"Project-Spot_{i}.csv\"\n",
-    "        v.to_csv(file_csv, index=False)\n",
+    "        v.to_csv(f'data/{file_csv}', index=False)\n",
     "        collection_name = v['Type'].iloc[0]\n",
     "        collection = db[collection_name]\n",
     "        result = v.to_dict(orient='records')\n",
@@ -341,6 +341,13 @@
    ],
    "source": [
     "export_to_mongodb(city_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating the MAP"
    ]
   },
   {
